--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -31,6 +31,7 @@
             <string>Ionicons</string>
             <string>Ionicons</string>
             <string>Ionicons</string>
+            <string>Ionicons</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -2149,17 +2150,68 @@
                                     </mask>
                                 </variation>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OZy-a9-V59">
-                                <rect key="frame" x="0.0" y="81" width="375" height="519"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OZy-a9-V59">
+                                <rect key="frame" x="0.0" y="100" width="375" height="500"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactsCell" id="Yv7-Qo-iOK">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContactsCell" id="Yv7-Qo-iOK" customClass="ContactsCell" customModule="LoLympics" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Yv7-Qo-iOK" id="pUU-1o-ydc">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="anY-7X-zo2">
+                                                    <rect key="frame" x="16" y="12" width="21" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="2x9-m5-ho6"/>
+                                                        <constraint firstAttribute="width" constant="21" id="RiU-4Q-dVD"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Ionicons" family="Ionicons" pointSize="21"/>
+                                                    <color key="textColor" red="0.95686274509803915" green="0.47450980392156861" blue="0.12156862745098039" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNR-1w-kGY">
+                                                    <rect key="frame" x="51" y="12" width="307" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="Dbe-nw-j3v"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.1764705882352941" green="0.1764705882352941" blue="0.1764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="16j-xT-gb3">
+                                                    <rect key="frame" x="0.0" y="43" width="375" height="1"/>
+                                                    <color key="backgroundColor" red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="T0K-yK-MNo"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="16j-xT-gb3" firstAttribute="leading" secondItem="pUU-1o-ydc" secondAttribute="leading" id="0Zj-DP-wyo"/>
+                                                <constraint firstAttribute="bottom" secondItem="16j-xT-gb3" secondAttribute="bottom" id="0u2-2e-Gy7"/>
+                                                <constraint firstItem="NNR-1w-kGY" firstAttribute="centerY" secondItem="anY-7X-zo2" secondAttribute="centerY" id="Db8-C2-ag4"/>
+                                                <constraint firstAttribute="trailing" secondItem="NNR-1w-kGY" secondAttribute="trailing" constant="17" id="LkR-pn-izU"/>
+                                                <constraint firstItem="NNR-1w-kGY" firstAttribute="leading" secondItem="pUU-1o-ydc" secondAttribute="leading" constant="16" id="MQR-OZ-BfM"/>
+                                                <constraint firstItem="anY-7X-zo2" firstAttribute="leading" secondItem="pUU-1o-ydc" secondAttribute="leading" constant="16" id="cMS-dA-Y0M"/>
+                                                <constraint firstAttribute="trailing" secondItem="16j-xT-gb3" secondAttribute="trailing" id="kWw-5C-aKE"/>
+                                                <constraint firstItem="NNR-1w-kGY" firstAttribute="centerY" secondItem="pUU-1o-ydc" secondAttribute="centerY" id="sbo-i7-Srm"/>
+                                                <constraint firstItem="NNR-1w-kGY" firstAttribute="leading" secondItem="anY-7X-zo2" secondAttribute="trailing" constant="14" id="wGd-5A-TDJ"/>
+                                                <constraint firstItem="anY-7X-zo2" firstAttribute="centerY" secondItem="pUU-1o-ydc" secondAttribute="centerY" id="wfS-No-Hmo"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="MQR-OZ-BfM"/>
+                                                    <exclude reference="sbo-i7-Srm"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contactsMenuLbl" destination="NNR-1w-kGY" id="Y2J-17-6Ti"/>
+                                            <outlet property="menuItemIcon" destination="anY-7X-zo2" id="J9M-9y-daZ"/>
+                                            <outlet property="menuSeparatorView" destination="16j-xT-gb3" id="4tS-Oe-s0q"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -2168,7 +2220,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="8hv-9P-whz" secondAttribute="trailing" id="3gh-WX-jdq"/>
                             <constraint firstItem="8hv-9P-whz" firstAttribute="top" secondItem="LmV-MD-tIK" secondAttribute="top" id="6xP-TH-TB3"/>
-                            <constraint firstItem="OZy-a9-V59" firstAttribute="top" secondItem="w3C-qw-blB" secondAttribute="bottom" constant="61" id="Dy5-12-9Io"/>
+                            <constraint firstItem="OZy-a9-V59" firstAttribute="top" secondItem="w3C-qw-blB" secondAttribute="bottom" constant="80" id="Dy5-12-9Io"/>
                             <constraint firstItem="3Fp-eh-wyb" firstAttribute="top" secondItem="OZy-a9-V59" secondAttribute="bottom" id="d04-xD-IFl"/>
                             <constraint firstItem="8hv-9P-whz" firstAttribute="leading" secondItem="LmV-MD-tIK" secondAttribute="leading" id="hSw-zm-qQF"/>
                             <constraint firstAttribute="trailing" secondItem="OZy-a9-V59" secondAttribute="trailing" id="oCy-DQ-zIs"/>
@@ -2178,7 +2230,8 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="600"/>
                     <connections>
-                        <outlet property="headerImage" destination="Xaj-gL-Ic8" id="4e8-a2-cMx"/>
+                        <outlet property="headerImage" destination="Xaj-gL-Ic8" id="cFF-q1-zJg"/>
+                        <outlet property="tableView" destination="OZy-a9-V59" id="cSB-re-UvP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I4L-M0-eaI" userLabel="First Responder" sceneMemberID="firstResponder"/>
