--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -1968,13 +1968,29 @@
                                             <constraint firstAttribute="bottom" secondItem="O4D-3L-59r" secondAttribute="bottom" constant="5" id="nsn-72-uWc"/>
                                         </constraints>
                                     </view>
+                                    <searchBar clipsSubviews="YES" contentMode="redraw" searchBarStyle="minimal" placeholder="Search" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOx-MJ-91M">
+                                        <rect key="frame" x="103" y="32" width="264" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="86Z-oy-B7k"/>
+                                            <constraint firstAttribute="width" constant="264" id="e0L-aE-hks"/>
+                                        </constraints>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="tOx-MJ-91M" secondAttribute="trailing" constant="8" id="8ug-Pe-V2f"/>
+                                    <constraint firstAttribute="bottom" secondItem="tOx-MJ-91M" secondAttribute="bottom" constant="8" id="Jse-Qn-gHZ"/>
                                     <constraint firstItem="itH-OF-Az4" firstAttribute="top" secondItem="QBf-ZX-gBo" secondAttribute="top" constant="40" id="TUC-Qd-gsl"/>
                                     <constraint firstAttribute="trailing" secondItem="itH-OF-Az4" secondAttribute="trailing" constant="16" id="wCa-5k-qdW"/>
                                     <constraint firstAttribute="height" constant="80" id="xHJ-dR-grB"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="subviews">
+                                        <exclude reference="tOx-MJ-91M"/>
+                                    </mask>
+                                </variation>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ORD-B6-GJO">
                                 <rect key="frame" x="111" y="100" width="248" height="500"/>
